--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -158,7 +158,8 @@ services:
       JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
       SPRING_DATA_MONGODB_URI: "${MONGO_URL}"
       webprotege.keycloak.serverUrl: http://${SERVER_HOST}/keycloak-admin
-      WEBPROTEGE_KEYCLOAK_CLIENTSECRET: ${ADMIN_CLI_SECRET}
+      webprotege.keycloak.clientSecret: ${ADMIN_CLI_SECRET}
+      webprotege.keycloak.clientId: admin-cli
       LOGGING_LEVEL_ROOT: INFO
       _JAVA_OPTIONS: >
         -Xdebug
