--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,7 +123,7 @@ services:
 
 
   webprotege-authorization-service:
-    image: alexsilaghi93/webprotege-authorization-service:1.0.4
+    image: protegeproject/webprotege-authorization-service:1.0.8-WHO
     ports:
       - '5010:5010'
     depends_on:
