--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,13 @@ services:
 
 
   keycloak:
-    image: protegeproject/keycloak
-    # ports:
-    #   - 8080:8080
+    image: webprotege-keycloak:0.0.1
+    command: [ "start-dev" ]
+    ports:
+      - 8080:8080
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
     environment:
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=password
