--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name icatx.northeurope.cloudapp.azure.com;
+    server_name webprotege-local.edu;
     sendfile on;
     client_max_body_size 40M;
     client_body_buffer_size 40M;
@@ -67,7 +67,7 @@ server {
         proxy_set_header   X-Forwarded-Proto $scheme;
         proxy_set_header   X-Forwarded-Host $http_host;
         proxy_set_header   X-Forwarded-Port $server_port;
-        proxy_redirect     http://keycloak:8080/keycloak-admin/ http://icatx.northeurope.cloudapp.azure.com/keycloak-admin/;
+        proxy_redirect     http://keycloak:8080/keycloak-admin/ http://webprotege-local.edu/keycloak-admin/;
     }
 
     location /wsapps {
