--- a/.github/workflows/update-compose.yml
+++ b/.github/workflows/update-compose.yml
@@ -22,26 +22,41 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ inputs.branch }}
+          ref: ${{ inputs.branch }}  # Use the input parameter 'branch'
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Update docker-compose image tag
+        id: update-compose
         run: |
-          SERVICE="${{ inputs.service }}"
-          VERSION="${{ inputs.version }}"
+          SERVICE="${{ inputs.service }}"  # Use the input parameter 'service'
+          VERSION="${{ inputs.version }}"  # Use the input parameter 'version'
           FILE=docker-compose.yml
 
           echo "Updating service '$SERVICE' to version '$VERSION' in $FILE"
 
+          # Save the original file checksum
+          cp "$FILE" "$FILE.bak"
+
+          # Attempt to update the image line
           sed -i "s|\(image: protegeproject/$SERVICE:\)[^[:space:]]*|\1$VERSION|" "$FILE"
 
           echo "Result:"
           grep "image: protegeproject/$SERVICE" "$FILE" || echo "No matching image line found."
 
+          # Check if the file was actually changed
+          if cmp -s "$FILE" "$FILE.bak"; then
+            echo "No change made to docker-compose.yml."
+            echo "changed=false" >> $GITHUB_OUTPUT
+          else
+            echo "docker-compose.yml updated."
+            echo "changed=true" >> $GITHUB_OUTPUT
+          fi
+
       - name: Commit and push changes
+        if: steps.update-compose.outputs.changed == 'true'
         run: |
-          git config user.name "who-icatx-bot"
-          git config user.email "who-icatx-bot@users.noreply.github.com"
+          git config user.name "webprotege-bot"
+          git config user.email "webprotege@users.noreply.github.com"
 
           git add docker-compose.yml
           git commit -m "chore: bump ${{ inputs.service }} to ${{ inputs.version }}"
