--- a/.github/workflows/update-compose.yml
+++ b/.github/workflows/update-compose.yml
@@ -1,7 +1,19 @@
 name: Update Compose File
 
 on:
-  workflow_call:
+  workflow_dispatch:  # Allows manual triggering via the GitHub UI or API
+    inputs:
+      service:
+        required: true
+        type: string
+      version:
+        required: true
+        type: string
+      branch:
+        required: true
+        type: string
+
+  workflow_call:  # Allows this workflow to be called from other workflows
     inputs:
       service:
         required: true
@@ -22,14 +34,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ inputs.branch }}  # Use the input parameter 'branch'
+          ref: ${{ github.event.inputs.branch }}  # Use the input parameter 'branch' (for both workflow_dispatch and workflow_call)
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Update docker-compose image tag
         id: update-compose
         run: |
-          SERVICE="${{ inputs.service }}"  # Use the input parameter 'service'
-          VERSION="${{ inputs.version }}"  # Use the input parameter 'version'
+          SERVICE="${{ github.event.inputs.service }}"  # Use the input parameter 'service'
+          VERSION="${{ github.event.inputs.version }}"  # Use the input parameter 'version'
           FILE=docker-compose.yml
 
           echo "Updating service '$SERVICE' to version '$VERSION' in $FILE"
@@ -59,5 +71,5 @@ jobs:
           git config user.email "webprotege@users.noreply.github.com"
 
           git add docker-compose.yml
-          git commit -m "chore: bump ${{ inputs.service }} to ${{ inputs.version }}"
-          git push origin ${{ inputs.branch }}
+          git commit -m "chore: bump ${{ github.event.inputs.service }} to ${{ github.event.inputs.version }}"
+          git push origin ${{ github.event.inputs.branch }}
