--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,34 @@
+# Upgrade mapping for WebSockets
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
+
+# Upstream for WebSocket traffic
+upstream websocket {
+    server webprotege-gwt-api-gateway:7777;
+}
+
+# --- HTTP Server (Redirect to HTTPS) ---
 server {
     listen 80;
     server_name icatx.northeurope.cloudapp.azure.com;
+
+    return 301 https://$host$request_uri;
+}
+
+# --- HTTPS Server ---
+server {
+    listen 443 ssl;
+    server_name icatx.northeurope.cloudapp.azure.com;
+
+    ssl_certificate /etc/nginx/certs/cert.pem;
+    ssl_certificate_key /etc/nginx/certs/key.pem;
+
+    # Optional: recommended SSL settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
     sendfile on;
     client_max_body_size 40M;
     client_body_buffer_size 40M;
@@ -15,7 +43,6 @@ server {
         proxy_set_header   X-Forwarded-Port  $server_port;
         proxy_set_header   X-Forwarded-Proto $scheme;
         proxy_redirect    http://keycloak:8080/auth/ http://localhost/auth/;
-        # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
         client_max_body_size   500m;
     }
 
@@ -29,7 +56,6 @@ server {
         proxy_set_header   X-Forwarded-Port  $server_port;
         proxy_set_header   X-Forwarded-Proto $scheme;
         proxy_redirect    http://keycloak:8080/auth/ http://localhost/auth/;
-        # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
         client_max_body_size   500m;
     }
 
@@ -37,11 +63,6 @@ server {
         proxy_pass http://webprotege-gwt-api-gateway:7777/files/submit;
         proxy_set_header   Host $http_host;
         client_max_body_size   500m;
-    }
-
-    location /icat/ {
-          proxy_pass http://icatx-api-gateway:7779/icat/;
-          proxy_set_header   Host $http_host;
     }
 
     location /data/ {
@@ -54,7 +75,6 @@ server {
         proxy_set_header   X-Forwarded-Port  $server_port;
         proxy_set_header   X-Forwarded-Proto $scheme;
         proxy_redirect    http://keycloak:8080/auth/ http://localhost/auth/;
-        # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
         client_max_body_size   500m;
         rewrite_log on;
     }
@@ -71,21 +91,10 @@ server {
     }
 
     location /wsapps {
-
         proxy_pass http://webprotege-gwt-api-gateway:7777;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
+        proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $host;
-
     }
-}
-
-upstream websocket  {
-    server webprotege-gwt-api-gateway:7777;
-}
-
-map $http_upgrade $connection_upgrade {
-    default upgrade;
-    '' close;
 }
