added new variable.

--- a/example.env
+++ b/example.env
@@ -5,3 +5,4 @@ KEYCLOAK_WEBPROTEGE_URL=http://webprotege-local.edu/keycloak-admin/realms/webpro
 KEYCLOAK_LOGOUT_URL=http://webprotege-local.edu/keycloak-admin/realms/webprotege/protocol/openid-connect/logout
 SERVER_HOST=webprotege-local.edu
 ADMIN_CLI_SECRET=
+WEBSOCKET_URL= wss://webprotege-local.edu/wsapps
