--- a/.github/workflows/deploy-vm.yml
+++ b/.github/workflows/deploy-vm.yml
@@ -47,5 +47,6 @@ jobs:
             git pull origin $BRANCH
 
             echo 'Rebuilding service: \$SERVICE'
-            sudo docker compose up -d --no-deps --build \$SERVICE
+            sudo docker compose down \$SERVICE
+            sudo docker compose up -d --no-deps \$SERVICE
           "
