--- a/.github/workflows/deploy-vm.yml
+++ b/.github/workflows/deploy-vm.yml
@@ -46,7 +46,7 @@ jobs:
             git checkout $BRANCH
             git pull origin $BRANCH
 
-            echo 'Rebuilding service: \$SERVICE'
-            sudo docker compose down \$SERVICE
-            sudo docker compose up -d --no-deps \$SERVICE
+            echo 'Rebuilding service: $SERVICE'
+            sudo docker compose down $SERVICE
+            sudo docker compose up -d --no-deps $SERVICE
           "
