--- a/.github/workflows/update-compose.yml
+++ b/.github/workflows/update-compose.yml
@@ -37,6 +37,14 @@ jobs:
           ref: ${{ github.event.inputs.branch }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
+
+      - uses: actions/create-github-app-token@v1
+        name: Generate GitHub token
+        id: app-token
+        with:
+          app-id: ${{ vars.PROTEGEPROJECT_BOT_APP_ID }}
+          private-key: ${{ secrets.PROTEGEPROJECT_BOT_APP_PRIVATE_KEY }}
+
       - name: Update docker-compose image tag
         id: update-compose
         run: |
@@ -65,27 +73,18 @@ jobs:
           fi
 
       - name: Commit and push changes
+        env:
+          TOKEN: ${{ steps.app-token.outputs.token }}
         if: steps.update-compose.outputs.changed == 'true'
         run: |
-          BRANCH_NAME="update-compose-branch-${{ github.sha }}"
-          git checkout -b "$BRANCH_NAME"
+          git remote set-url --push origin https://protegeproject-bot:$TOKEN@github.com/protegeproject/webprotege-deploy.git
           git config user.name "webprotege-bot"
           git config user.email "webprotege@users.noreply.github.com"
 
           git add docker-compose.yml
           git commit -m "chore: bump ${{ github.event.inputs.service }} to ${{ github.event.inputs.version }}"
-          git push origin $BRANCH_NAME
-
-      - name: Create a pull request
-        if: steps.update-compose.outputs.changed == 'true'
-        uses: peter-evans/create-pull-request@v7
-        with:
-          token: ${{ steps.app-token.outputs.token }}
-          title: "chore: bump ${{ github.event.inputs.service }} to ${{ github.event.inputs.version }}"
-          body: "Automated PR to bump the version of the ${{ github.event.inputs.service }}."
-          head: ${{ github.actor }}:update-compose-branch-${{ github.sha }}
-          base: main
-
+          git push origin ${{ github.event.inputs.branch }}    
+      
 
       - name: Set service/version outputs
         id: set-vars
