--- a/example.env
+++ b/example.env
@@ -6,3 +6,4 @@ KEYCLOAK_LOGOUT_URL=http://webprotege-local.edu/keycloak-admin/realms/webprotege
 SERVER_HOST=webprotege-local.edu
 ADMIN_CLI_SECRET=
 WEBSOCKET_URL=wss://webprotege-local.edu/wsapps
+SSH_PRIVATE_KEY=
