--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,7 @@ services:
       MINIO_ROOT_PASSWORD: webprotege
 
   webprotege-gwt-api-gateway:
-    image: protegeproject/webprotege-gwt-api-gateway:2.0.3
+    image: protegeproject/webprotege-gwt-api-gateway:1.0.13
     depends_on:
       keycloak:
         condition: service_healthy
@@ -84,6 +84,8 @@ services:
       webprotege.minio.accessKey: webprotege
       webprotege.minio.secretKey: webprotege
       webprotege.minio.endPoint: http://minio:9000
+      SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER_URI: http://webprotege-local.edu/keycloak-admin/realms/webprotege
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI: http://webprotege-local.edu/keycloak-admin/realms/webprotege
       spring.servlet.multipart.max-file-size: 300MB
       spring.servlet.multipart.max-request-size: 300MB
       webprotege.rabbit.timeout: 600000
@@ -219,7 +221,7 @@ services:
 
 
   nginx:
-    image: protegeproject/webprotege-nginx:1.2.1
+    image: protegeproject/webprotege-nginx:1.2.2
     hostname: webprotege-local.edu
     ports:
       - 80:80
