changed docker config.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,6 +44,11 @@ server {
           proxy_set_header   Host $http_host;
     }
 
+    location /versioning/ {
+              proxy_pass http://icatx-versioning-service:7722/icat/;
+              proxy_set_header   Host $http_host;
+    }
+
     location /data/ {
         proxy_pass http://webprotege-gwt-api-gateway:7777/data/;
         proxy_set_header   Host $http_host;
