--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
 
 
   keycloak:
-    image: webprotege-keycloak:0.0.1
+    image: alexsilaghi93/webprotege-keycloak:0.0.1
     command: [ "start-dev" ]
     ports:
       - 8080:8080
@@ -78,8 +78,6 @@ services:
 
   webprotege-gwt-api-gateway:
     image: protegeproject/webprotege-gwt-api-gateway:2.0.5-WHO
-    ports:
-      - '5008:5008'
     depends_on:
       keycloak:
         condition: service_healthy
