--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -119,7 +119,7 @@ services:
 
 
   webprotege-gwt-ui-server:
-    image: protegeproject/webprotege-gwt-ui-server:7.2.19-WHO
+    image: protegeproject/webprotege-gwt-ui-server:8.0.0-WHO
     depends_on:
       webprotege-gwt-api-gateway:
         condition: service_started
@@ -152,7 +152,7 @@ services:
 
 
   webprotege-authorization-service:
-    image: protegeproject/webprotege-authorization-service:1.0.13-WHO
+    image: protegeproject/webprotege-authorization-service:2.0.0-WHO
     ports:
       - '5010:5010'
     depends_on:
@@ -209,7 +209,7 @@ services:
       - elk
 
   webprotege-event-history-service:
-    image: protegeproject/webprotege-event-history-service:2.0.13-WHO
+    image: protegeproject/webprotege-event-history-service:2.0.14-WHO
     ports:
       - '5006:5006'
     depends_on:
@@ -286,7 +286,7 @@ services:
 
   webprotege-backend-service:
     user: root
-    image: protegeproject/webprotege-backend-service:2.2.10-WHO
+    image: protegeproject/webprotege-backend-service:2.2.13-WHO
     ports:
       - "5005:5005"  # For remote debugging
       - "9010:9010"  # For JMX monitoring
@@ -429,7 +429,7 @@ services:
 
   icatx-api-gateway:
     user: root
-    image: protegeproject/icatx-api-gateway:0.0.64
+    image: protegeproject/icatx-api-gateway:0.0.66
     ports:
       - '5014:5014'
       - '7779:7779'
@@ -463,6 +463,26 @@ services:
         max-file: "3"
     networks:
       - elk
+
+
+  icatx-id-generation-service:
+    image: protegeproject/icatx-id-generation-service:0.0.2
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      elasticsearch:
+        condition: service_healthy
+    environment:
+      JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
+      LOGGING_LEVEL_ROOT: INFO
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI: ${ISSUER_URI}
+      spring.security.oauth2.resourceserver.jwt.issuer-uri: ${ISSUER_URI}
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: ${JWK_SET_URI}
+      SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER-URI: ${ISSUER_URI}
+      SPRING_DATA_MONGODB_URI: "${MONGO_URL}"
+    networks:
+      - elk
+
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.12.2
@@ -519,6 +539,11 @@ services:
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
       - XPACK_SAVED_OBJECTS_IMPORT=/usr/share/kibana/dashboards/webprotege-logs.ndjson
+      - ELASTICSEARCH_SERVICE_HOST=elasticsearch
+      - ELASTICSEARCH_SERVICE_PORT=9200
+      - XPACK_SECURITY_ENABLED=false
+      - ELASTICSEARCH_USERNAME=kibana_system
+      - ELASTICSEARCH_PASSWORD=kibana
     volumes:
       - ./kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml:ro
       - ./kibana/dashboards:/usr/share/kibana/dashboards
@@ -527,9 +552,14 @@ services:
     depends_on:
       elasticsearch:
         condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5601"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   nginx:
-    image: protegeproject/webprotege-nginx:1.2.2
+    image: protegeproject/webprotege-nginx:1.2.2-WHO
     hostname: ${SERVER_HOST}
     ports:
       - 80:80
