--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -49,6 +49,11 @@ server {
               proxy_set_header   Host $http_host;
     }
 
+    location /elastic/ {
+              proxy_pass http://elasticsearch:5601/;
+              proxy_set_header   Host $http_host;
+    }
+
     location /data/ {
         proxy_pass http://webprotege-gwt-api-gateway:7777/data/;
         proxy_set_header   Host $http_host;
