--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -49,11 +49,6 @@ server {
               proxy_set_header   Host $http_host;
     }
 
-    location /elastic/ {
-              proxy_pass http://elasticsearch:5601/;
-              proxy_set_header   Host $http_host;
-    }
-
     location /data/ {
         proxy_pass http://webprotege-gwt-api-gateway:7777/data/;
         proxy_set_header   Host $http_host;
@@ -81,13 +76,23 @@ server {
     }
 
     location /wsapps {
-
         proxy_pass http://webprotege-gwt-api-gateway:7777;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
         proxy_set_header Host $host;
+    }
 
+    location /kibana/ {
+        proxy_pass http://kibana:5601/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        rewrite ^/kibana/(.*) /$1 break;
     }
 }
 
