--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -93,6 +93,15 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         rewrite ^/kibana/(.*) /$1 break;
+        proxy_redirect off;
+        proxy_buffering off;
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
+    }
+
+    location /kibana {
+        return 301 $scheme://$host$uri/;
     }
 }
 
